--- a/anim.html
+++ b/anim.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <input type="checkbox" id="checkbox" class="gear-checkbox">
+    <label for="checkbox" class="topgear">
+    </label>
+    <div class="check">
+        <div class="check1"></div>
+        <div class="check2"></div>
+    </div>
     <div class="gear1">
         <div class="gear11">
             <div class="center1"></div>
@@ -28,6 +35,8 @@
             <div class="tooth2"></div>
         </div>
     </div>
+    <span class="enable">Animation enabled</span>
+    <span class="disable">Animation disabled</span>
 </body>
 
 </html>
